<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.dialog.DialogChooseAddress">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <vn.techres.line.widget.AppTextViewBold
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_dialog_policy_right"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/gray_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16">

                <vn.techres.line.widget.AppTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/policy_browse_member" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <vn.techres.line.widget.AppTextViewBold
                    android:id="@+id/tvPolicyCancel"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border_button_left_gray"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_15"
                    android:text="@string/out"
                    android:textColor="@color/common_cancel_text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/vUiLine"
                    android:layout_width="@dimen/line_size"
                    android:layout_height="match_parent"
                    android:background="@color/common_line_color" />

                <vn.techres.line.widget.AppTextViewBold
                    android:id="@+id/tvPolicyConfirm"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border_button_right_orange"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_15"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>