<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        tools:ignore="MissingDefaultResource"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:background="@drawable/bg_radius_10"

                >

                <vn.techres.line.widget.AppTextView
                    android:id="@+id/tvVote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radius_top_20"
                    android:paddingVertical="@dimen/dp_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/vote"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:background="#ececec" />

                <vn.techres.line.widget.AppTextView
                    android:id="@+id/tvNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_16"
                    android:gravity="center"
                    android:textSize="@dimen/sp_14"
                    app:textAllCaps="true"
                    android:text="@string/note"
                    android:textColor="@color/black" />

            </LinearLayout>

            <vn.techres.line.widget.AppButton
                android:id="@+id/btnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/bg_btn_lvl"
                android:text="@string/cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>