<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/lnContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_100"
        android:orientation="vertical"
        tools:context=".ui.activity.CreateVoteActivity">

        <LinearLayout
            android:id="@+id/tbHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8">

            <ImageButton
                android:id="@+id/ibCancel"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:background="@drawable/bg_ripple_animation_button_back"
                android:src="@drawable/ic_back_black"
                android:visibility="visible"
                tools:ignore="ContentDescription" />

            <vn.techres.line.widget.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create_vote_title"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <ImageButton
                android:id="@+id/btnCheck"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:background="@drawable/ic_check_vote_off"
                android:padding="@dimen/dp_5"
                android:visibility="visible"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray_300" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvVote"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_100"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbPinnedVote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checbox_pinned_vote_selector"
                        android:paddingHorizontal="@dimen/dp_8"
                        android:paddingVertical="@dimen/dp_16"
                        android:text="@string/pin_the_top"
                        android:textColor="@color/gray_400"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

                <vn.techres.line.widget.AppEditText
                    android:id="@+id/edtContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/title_content_vote"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="120"
                    android:paddingVertical="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_16"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_input_content_vote" />

                <vn.techres.line.widget.AppTextView
                    android:id="@+id/tvAddOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingVertical="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_16"
                    android:text="@string/add_option"
                    android:textColor="@color/main_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <vn.techres.line.widget.AppTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:background="@color/white"
                        android:paddingVertical="@dimen/dp_16"
                        android:paddingStart="@dimen/dp_16"
                        android:text="@string/add_optional"
                        android:textColor="@color/main_bg"
                        android:textSize="@dimen/sp_12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_300" />

                    <LinearLayout
                        android:id="@+id/llSetLimitDatetime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/dp_16"
                        android:visibility="visible">

                        <vn.techres.line.widget.AppTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/dp_16"
                            android:text="@string/set_limit"
                            android:textColor="@color/black" />

                        <vn.techres.line.widget.AppTextView
                            android:id="@+id/tvLimitDateTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/dp_16"
                            android:text="@string/no_of_limit"
                            android:textColor="@color/gray_600"
                            android:textSize="@dimen/sp_10" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_300"
                        android:visibility="visible" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:paddingVertical="@dimen/dp_16"
                        android:visibility="gone">

                        <vn.techres.line.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:text="@string/hide_user_vote"
                            android:textColor="@color/black" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/swHideUserVote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_300"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:paddingVertical="@dimen/dp_16"
                        android:visibility="gone">

                        <vn.techres.line.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:text="@string/hide_result_vote"
                            android:textColor="@color/black" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/swHideResult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_300"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:paddingVertical="@dimen/dp_16"
                        android:visibility="gone">

                        <vn.techres.line.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:text="@string/choose_more_options_vote"
                            android:textColor="@color/black" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/swChooseManyOptions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_300"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:paddingVertical="@dimen/dp_16"
                        android:visibility="gone">

                        <vn.techres.line.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:text="@string/maybe_option"
                            android:textColor="@color/black" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/swAddOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>